tdf#98088: prevent access to invalid sub node

Change-Id: I73bd77682bfb60474ba18ca85bc5d008c70a7f97